<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TaskManager</string>
    <string name="user_name">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="default_login_hint">Default username and password is admin:admin</string>
    <string name="username_empty_hint">Username cannot be empty!</string>
    <string name="password_empty_hint">Password cannot be empty!</string>
    <string name="please_wait">Please wait</string>
    <string name="login_fail_wrong_info">Login failed. Please check your username and password.</string>
    <string name="login_fail_bad_network">Login failed due to bad network. Please try later again.</string>
    <string name="title_activity_task_list">TaskList</string>
    <string name="new_task_coming">Hint: A New Task Has Arrived</string>
    <string name="notification_title">New Task Notification</string>
    <string name="no_data">No Data.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="task_default_title">TASK TITLE</string>
    <string name="person_name">person name</string>
    <string name="address">address</string>
    <string name="contact_info">contact info</string>
    <string name="title_activity_single_task">SingleTaskActivity</string>
    <string name="text_input_title">TEXT</string>
    <string name="pic_title">PIC</string>
    <string name="recording_title">Recording</string>
    <string name="save">SAVE</string>
    <string name="task_detail">Details</string>
    <string name="task_name">Task Name:</string>
    <string name="task_person_name">Person Name:</string>
    <string name="task_address">Address:</string>
    <string name="task_address_type">Address type:</string>
    <string name="task_contact_info">Contact Info:</string>
    <string name="confirm_know">Confirm</string>
    <string name="sign_in_success">Sign in successfully!</string>
    <string name="sign_in_fail">Sign in failed!</string>
    <string name="log_out">Logout</string>
    <string name="logout_alert_title">Please Confirm to Logout.</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="net_work_unavailable">Net work is not accessable.</string>
    <string name="refresh">Refresh</string>
    <string name="start_task">Start Task</string>
    <string name="app_login_title">Outside Task Assistant</string>
    <string name="connection_out_of_time">Connection ran out of time, please try latter again.</string>
    <string name="identity_card">Identity Card:</string>
    <string name="bankCard">Bank Card:</string>
    <string name="bank_name">Bank Name:</string>
    <string name="card_name">Card Owner:</string>
    <string name="task_memo">Memo:</string>
    <string name="case_amount">Case Amount:</string>
    <string name="has_payed">Has Paid:</string>
    <string name="change_task_status_fail">Change task status failed.</string>
    <string name="task_status_change_success">Task status changed.</string>
    <string name="task_accept_success">Task is successfully accepted.</string>
    <string name="task_status_default">Task Status</string>
    <string name="un_read">UnRead</string>
    <string name="has_been_read">Read</string>
    <string name="task_processing">Processing</string>
    <string name="task_status_not_valid">Task status not valid, may be accepted by others.</string>
    <string name="task_total_count">Task Total Count</string>
    <string name="capture_image">Capture to upload</string>
    <string name="select_image">Select picture to upload</string>
    <string name="record_audio">Record audio to upload</string>
    <string name="select_audio">Select audio to upload</string>
    <string name="invalid_image">Invalid image file!</string>
    <string name="invalid_audio">Invalid audio file!</string>
    <string name="file_not_exist">File is not exist.</string>
    <string name="sd_card_not_available">SD card is not available, images and audios can not display.</string>
    <string name="image_upload_succeed">Image upload succeed.</string>
    <string name="audio_upload_succeed">Audio upload succeed.</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_confirm">New Password Confirm</string>
    <string name="password_cannot_empty">Password cannot be empty.</string>
    <string name="new_pwd_cannot_empty">New Password cannot be empty.</string>
    <string name="confirm_pwd_not_equal">Confirm Password is not equal to New Passwrod.</string>
    <string name="change_pwd_success">Change password success!</string>
    <string name="change_password_fail">Change password failed.</string>
    <string name="commit_task">Commit Task</string>
    <string name="need_continue_visit">Need Continue Visit</string>
    <string name="task_report">Report</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="commit_task_success">Commit Task Success!</string>
    <string name="commit_task_failed">Commit Task Failed.</string>
    <string name="actual_visitor">Actual Visitor</string>
    <string name="roll_back_task">Roll Back</string>
    <string name="roll_back_fail">Roll back failed. Please try later again.</string>
    <string name="roll_back_title">Roll Back Task</string>
    <string name="all">All</string>
    <string name="task_status">Task Status:</string>
    <string name="task_location">Location:</string>
    <string name="province">Province</string>
    <string name="city">City</string>
    <string name="region">Region</string>
    <string name="filter_result">Match the filter with %d tasks</string>
    <string name="task_urgent">(Urgent)</string>
    <string name="default_folder">/Camera</string>
    <string name="action_send">Send</string>
    <string name="picture_num"> pictures</string>
    <string name="loading_now">Loading...</string>
    <string name="max_num_toast">You can only upload 9 pictures once.</string>
    <string name="max_num_record_toast">You can only upload %d audios once.</string>
    <string name="has_into_queue_toast">Has added into upload queue.</string>
    <string name="app_update_title">App update info</string>
    <string name="app_update_message">Current version is old, please click to update.</string>
    <string name="update">Update</string>
    <string name="app_updating">Application is updating</string>
    <string name="app_cancel_update">Cancel updating</string>
    <string name="edit_report">Edit report</string>

</resources>
