<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.talent.taskmanager.SingleTaskActivity" >

    <item android:id="@+id/action_start_task"
        android:title="@string/start_task"
        android:orderInCategory="100"
        android:showAsAction="always" />

    <item android:id="@+id/action_edit_report"
        android:title="@string/edit_report"
        android:orderInCategory="100"
        android:showAsAction="always" />

    <item android:id="@+id/action_start_commit"
        android:title="@string/commit_task"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/action_roll_back_task"
        android:title="@string/roll_back_task"
        android:orderInCategory="100"
        android:showAsAction="never" />

</menu>
