<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="@string/task_status"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_status"
        android:layout_toRightOf="@+id/txt_status"
        android:spinnerMode="dialog"
        android:dropDownWidth="@dimen/spinner_width" />

    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:id="@+id/layout_task_location"
        android:layout_height="match_parent"
        android:layout_below="@+id/txt_status"
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp">

        <TextView
            android:id="@+id/txt_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_status"
            android:text="@string/task_location"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_province"
            android:layout_toRightOf="@+id/txt_location"
            android:layout_below="@+id/spinner_status"
            android:spinnerMode="dialog"
            android:dropDownWidth="@dimen/spinner_width" />
        <TextView
            android:id="@+id/txt_province"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/province"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_city"
            android:spinnerMode="dialog"
            android:paddingLeft="5dp"
            android:dropDownWidth="@dimen/spinner_width" />
        <TextView
            android:id="@+id/txt_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_region"
            android:spinnerMode="dialog"
            android:paddingLeft="5dp"
            android:dropDownWidth="@dimen/spinner_width" />
        <TextView
            android:id="@+id/txt_region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/region"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txt_filter_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:layout_below="@+id/layout_task_location"
        android:text="@string/filter_result"/>

    <View
        android:id="@+id/line_filter"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_below="@+id/txt_filter_result"
        android:background="?android:attr/listDivider"/>

    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/line_filter"
        android:paddingTop="5dp"
        android:paddingLeft="5dp">
        <TextView
            android:id="@+id/list_header_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_total_count"/>

        <TextView
            android:id="@+id/header_count_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"/>

        <TextView
            android:id="@+id/list_header_unread"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/un_read"
            android:textColor="@android:color/holo_red_light"/>

        <TextView
            android:id="@+id/list_header_unread_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:textColor="@android:color/holo_red_light"/>

        <TextView
            android:id="@+id/list_header_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/has_been_read"
            android:textColor="@android:color/holo_blue_light"/>

        <TextView
            android:id="@+id/list_header_read_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:textColor="@android:color/holo_blue_light"/>

        <TextView
            android:id="@+id/list_header_processing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/task_processing"
            android:textColor="@android:color/holo_green_light"/>

        <TextView
            android:id="@+id/list_header_processing_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:textColor="@android:color/holo_green_light"/>

    </LinearLayout>
</RelativeLayout>