<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="10dp">

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_valid"
        android:id="@+id/switch_is_valid"
        android:textOff="@string/no"
        android:textOn="@string/yes"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/need_continue_visit"
        android:id="@+id/switch_continue_visit"
        android:textOff="@string/no"
        android:textOn="@string/yes"
        android:layout_below="@+id/switch_is_valid"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/task_report"
        android:id="@+id/textView"
        android:layout_below="@+id/switch_continue_visit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="3dp"
        android:id="@+id/edit_visit_report"
        android:layout_below="@+id/textView"
        android:background="@android:color/transparent"
        android:gravity="top|left"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>